Fix cropping of bg-img in Chrome Mobile
The left side of the bg-img is being cropped slightly in the Chrome
Mobile Browser.

Push to test adjustments.

--- a/styles.css
+++ b/styles.css
@@ -22,12 +22,15 @@ body {
     width: auto;
     height: 100vh;
     aspect-ratio: 117/160;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-div {
+#bg-img {
     width: 100%;
     height: 100%;
     background-image: url(https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExZnJmYXZjZmI0NDRncTh6dHRwOHphaXQ4cXdqMTlubjZrcXkwZ3ZocyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3o85xCbzHvU144C5tm/giphy.gif);
-    background-size: cover;
+    background-size: contain;
     background-position: center;
 }
